--- a/nxos_bgp_idle_neighbor_shutdown.yml
+++ b/nxos_bgp_idle_neighbor_shutdown.yml
@@ -1,7 +1,7 @@
 ---
 
   - name: Check BGP neighbors in Idle State
-    hosts: fls
+    hosts: testhost
     connection: local
     gather_facts: no
 
